Bug 511104 - Transaction with a tag is not shown in a transaction report filtered on that tag
Summary: Transaction with a tag is not shown in a transaction report filtered on that tag
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.2.1
Platform: Mint (Ubuntu based) Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-10-25 16:18 UTC by Paul Worrall
Modified: 2026-02-21 10:14 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2.2
Sentry Crash Report:


Attachments
File that demonstrates the bug (1.31 KB, application/x-kmymoney)
2026-02-02 11:13 UTC, Paul Worrall
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Paul Worrall 2025-10-25 16:18:23 UTC
SUMMARY
If I create a transaction in an account and assign a tag to it, the transaction is not shown in a transaction report that is filtered by that tag.

STEPS TO REPRODUCE
1. Open an account ledger
2. Add a new transaction and assign a tag to it
3. Create a Transaction report (e.g. Transaction by Payee) and filter it on the tag

OBSERVED RESULT
No transactions are shown

EXPECTED RESULT
The transaction that was created in step 2 is shown

SOFTWARE/OS VERSIONS
KMM installed from Arch repository using pacman
KDE Plasma Version: 6.5.0
KDE Frameworks Version: 6.19.0
Qt Version: 6.10.0

ADDITIONAL INFORMATION
Examining the XML, the tag is only assigned to the Category split
Comment 1 cwreid3@gmail.com 2026-02-01 23:08:50 UTC
I am trying to make the change to Linux away from M.  Financial software is VERY important to me.  I have been very pleased with KMyMoney until.  I need reporting capabilities I can customize.  I'm not sure what additional information I need to provide here, but I will be glad to if someone can let me know what I can do to help in this.

Thanks

Charles Reid
Comment 2 Jack 2026-02-01 23:48:19 UTC
The biggest limitation on improving the reporting capabilities of KMyMoney are the limited developer time available.  The main thin users can do when making a request is to be very specific about the use case and what the report should look like.  Also, for interim workarounds, think about exporting the necessary transaction information and preparing the report with other software.  While it's not great to have to do that, at least it should be able to get you what you need.  It is also possible to save your data to an SQL back end, and use that access to create reports.
Comment 3 Thomas Baumgart 2026-02-02 08:32:10 UTC
I can imagine that the transaction does not appear in your report in the following scenario: the transaction has two splits (one for the account and one for the counter-account e.g. expense). It could well be that the payee is assigned to one and the tag to the other split. You can check that using the "Transaction details" function available in the context menu of the ledger. Is that assumption about right?
Comment 4 Paul Worrall 2026-02-02 11:13:46 UTC
Created attachment 189161 [details]
File that demonstrates the bug

I attach a minimal file that shows the issue.  It has two transactions with different tags and a report "Transaction by Payee (Customised)" that is filtered by one of the tags.
For both transactions, the tag is assigned to the category split and the asset split has no tag (i.e. how the tags are applied when the transaction is entered)
Comment 5 cwreid3@gmail.com 2026-02-02 15:01:55 UTC
https://bugs.kde.org/show_bug.cgi?id=511104


Thanks, Jack, Thomas and Paul. I really appreciate your help. I’m a
few weeks into this Linux thing and I’m still stumbling around a lot.


Paul, your small file that you sent shows exactly what I am
experiencing. Maybe I’m using Tags incorrectly.


I have set up 3 tags.


My wife and I get periodic deposits from retirement accounts from the
same brokerage company. In order to isolate those deposits as to who’s
account they come from, created a tag with my name and a second one
with her name.


We also have payees that we pay for both ourselves and for a rental
property. To keep those payments separate I created a tag for rental.

I have a particular payee: Electric Company

I set up a category: Utilities-Electric

I pay them for both my home and for a rental property.

So that I can separate the 2 payments I enter our payment without a
tag and the payment for the rental property with the Rental tag.


When I run the report if I leave all tags checked I get both
transactions even though 1 has no tag, but if I uncheck my and my
wife’s tag the report is blank. So how should I set up these
transactions? Can I add a tag to the payee:

Electric Company-No Tag, and Electric Company-Rental Tag.

Or do I need to set up 2 separate Electric Company payees? One for
personal payments and one for rental payments? I really hate to do
that since it is the same electric company.


On Mon, Feb 2, 2026 at 6:13 AM Paul Worrall <bugzilla_noreply@kde.org> wrote:
>
> https://bugs.kde.org/show_bug.cgi?id=511104
>
> --- Comment #4 from Paul Worrall <p.r.worrall@gmail.com> ---
> Created attachment 189161 [details]
>   --> https://bugs.kde.org/attachment.cgi?id=189161&action=edit
> File that demonstrates the bug
>
> I attach a minimal file that shows the issue.  It has two transactions with
> different tags and a report "Transaction by Payee (Customised)" that is
> filtered by one of the tags.
> For both transactions, the tag is assigned to the category split and the asset
> split has no tag (i.e. how the tags are applied when the transaction is
> entered)
>
> --
> You are receiving this mail because:
> You are on the CC list for the bug.
Comment 6 Paul Worrall 2026-02-14 11:50:28 UTC
Setting back to "Reported" now that a test file is attached
Comment 7 Thomas Baumgart 2026-02-19 15:16:01 UTC
I think I have a very similar situation, but I created two categories. No need to have two payees which does not make sense.
Comment 8 Thomas Baumgart 2026-02-20 15:00:30 UTC
Git commit 9e1f3f86422619f38124d919682a18d36822f1e2 by Thomas Baumgart.
Committed on 20/02/2026 at 15:00.
Pushed by tbaumgart into branch 'master'.

Fix handling of tags in reports

Added testcase from bug entry
FIXED-IN: 5.2.2

M  +1    -0    kmymoney/plugins/views/reports/core/querytable.cpp
M  +1    -0    kmymoney/plugins/views/reports/core/tests/data/CMakeLists.txt
A  +5    -0    kmymoney/plugins/views/reports/core/tests/data/csv/test-511104-report-querytable-Transaction-by-payee-_Customised_.csv
A  +89   -0    kmymoney/plugins/views/reports/core/tests/data/test-511104.xml

https://invent.kde.org/office/kmymoney/-/commit/9e1f3f86422619f38124d919682a18d36822f1e2
Comment 9 Thomas Baumgart 2026-02-21 10:14:16 UTC
Git commit 07b7c8819bc2d66872c811a1c5c1b29a453718c2 by Thomas Baumgart.
Committed on 21/02/2026 at 10:14.
Pushed by tbaumgart into branch '5.2'.

Fix handling of tags in reports

Added testcase from bug entry
FIXED-IN: 5.2.2
(cherry picked from commit 9e1f3f86422619f38124d919682a18d36822f1e2)

# Conflicts:
#	kmymoney/plugins/views/reports/core/tests/data/test-511104-report-querytable-Transaction-by-payee-_Customised_.csv

M  +1    -0    kmymoney/plugins/views/reports/core/querytable.cpp
M  +1    -0    kmymoney/plugins/views/reports/core/tests/data/CMakeLists.txt
A  +5    -0    kmymoney/plugins/views/reports/core/tests/data/test-511104-report-querytable-Transaction-by-payee-_Customised_.csv
A  +89   -0    kmymoney/plugins/views/reports/core/tests/data/test-511104.xml

https://invent.kde.org/office/kmymoney/-/commit/07b7c8819bc2d66872c811a1c5c1b29a453718c2