Fix handling of tags in reports

Added testcase from bug entry

BUG: 511104
FIXED-IN: 5.2.2